Remover clienteId do payload de criar carrinho
