# aspnet-api/src/Api/Contracts/Requests/Carrinhos/CreateCarrinhoRequest.cs
@@ -1,8 +1,3 @@
 namespace aspnet_api.Api.Contracts.Requests.Carrinhos;
 
-public sealed record CreateCarrinhoRequest
-{
-    public long ClienteId { get; init; }
-}
-
-
+public sealed record CreateCarrinhoRequest;
